src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

@font-face {
  font-family: 'Minecraft';
  src: url('../../public/fonts/Minecraftia.ttf') format('truetype');
  font-display: swap;
}

@keyframes growShrink {
  0%, 100% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.1);
  }
}



.minecraft-font {
  font-family: 'Minecraft', monospace;
  image-rendering: pixelated;
  text-shadow: 2px 2px 0 #000;
  letter-spacing: 0.09em;

}


body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

.textured-button {
  position: relative;
  background-image: url(/images/texture-button.png);
  background-size: 3em;
  background-repeat: repeat;
  color: white;
  padding: 0.75rem 1rem;
  border-bottom: 4px solid #8d8d8d00;
  text-align: center;
  font-size: 1.3rem;
  transition: all 0.2s ease;
}

.textured-button::before {
  content: "";
  position: absolute;
  inset: 0;
  background-color: rgba(255, 255, 255, 0.14);
  pointer-events: none;
}

/* Size-specific styles */
.large-button {
  width: 36rem;
}

.small-button {
  width: 17rem;
}

.tiny-button {
  width: 4rem;
  padding: 0.25rem 0.5rem;
}

.minecraft-pulse {
  color: #fde047; /* tailwind's text-yellow-300 */
  font-size: 1.6rem; /* text-xl */
  filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5)); /* drop-shadow-lg equivalent */
  animation: growShrink 1.5s ease-in-out infinite;
}

